# Optodice

./: .gitignore  Cargo.toml  README.md  attributes.json  build.rs  heroes.json  layout.glade  settings_layout.glade  skills.json
.github/workflows/: builds.yml  linux-build.yml  mac-build.yml  rust.yml  superlinter.yml  windows-build.yml
optolith-data/Data/de-DE/: Spells.yaml
optolith-data/Data/univ/: CombatTechniques.yaml  Spells.yaml
optolith-data/custom/: skills.json
php-avatar-script/: upload-avatar.php
src/: Ids.json  ability_check.rs  ability_check_factory.rs  attribute_check.rs  attribute_check_result.rs  avatar.rs  battle_check.rs  battle_check_result.rs  cache.rs  check_result.rs  config.rs  config.toml  context.rs  difficulty.rs  main.rs  optolith.rs  optolith_attributes.rs  optolith_combat_technique.rs  optolith_combat_techniques.rs  optolith_hero.rs  optolith_heroes.rs  optolith_skills.rs  optolith_weapon.rs  skill_check.rs  skill_check_factory.rs  skill_check_result.rs  talents.json  talents_serde.json  test_result.rs  test_ui.rs  webhook.rs
src/checks/: attribute_check.rs  battle_check.rs  mod.rs  skill_check.rs  skill_check_factory.rs  spell_check.rs
src/checks/results/: attribute_check_result.rs  battle_check_result.rs  mod.rs  skill_check_result.rs  spell_check_result.rs
src/optolith/: attributes.rs  character.rs  characters.rs  combat_technique.rs  combat_techniques.rs  hero.rs  heroes.rs  mod.rs  skills.rs  spell.rs  spells.rs  weapon.rs
src/php-avatar-script/: upload-avatar.php
src/ui/: actions.rs  builder.rs  dialog.rs  mod.rs  settings.rs  ui_hero_select.rs
