[package]
name = "optodice"
version = "0.2.1"
authors = ["soulflyman <optodice@no-spam4.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
serde = "1.0"
serde_derive = { version = "1.0", feature = "serde_derive" }
serde_yaml = "*"
gio = "0.14.0"
glib = "0.14.0"
gdk = "0.14.0"
gdk-pixbuf = "0.14.0"
discord-webhook = { version = "0.1.2-alpha", git = "https://github.com/soulflyman/discord-webhook", branch = "main" }
toml = "*"
#ftp = { version = "<version>", features = ["secure"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "*"
crc = "^2.0.0"
image = "0.23.*"
base64 = "0.13.0"

[dependencies.gtk]
version = "0.14.0"
feature = ["v3_24"]